raiden/raidenwebui/src/styles.css
/* You can add global styles to this file, and also import other style files */
.top5 { margin-top:5px; }
.top7 { margin-top:7px; }
.top10 { margin-top:10px; }
.top15 { margin-top:15px; }
.top17 { margin-top:17px; }
.top30 { margin-top:30px; }

.bottom5 { margin-bottom:5px; }
.bottom7 { margin-bottom:7px; }
.bottom10 { margin-bottom:10px; }
.bottom15 { margin-bottom:15px; }
.bottom17 { margin-bottom:17px; }
.bottom30 { margin-bottom:30px; }

html, body, .my-content {
  margin: 0;
  width: 100%;
  height: 100%;
}

.ui-inputtext.ng-dirty.ng-invalid {
    border-left: 5px solid #a94442;
}
.ui-inputtext.ng-dirty.ng-valid {
    border-left: 5px solid #42A948;
}

